[package]
name = "blazemap"
version = "0.0.3"
authors = ["Andrew Sonin <sonin.cel@yandex.ru>"]
categories = ["data-structures"]
description = """
Provides a wrapper for replacing a small number of clumsy objects with identifiers, \
and also implements a vector-based slab-like map with an interface similar to that of HashMap.
"""
keywords = ["map", "slab", "hashmap"]
license = "MIT"
repository = "https://github.com/andrewsonin/blazemap"
readme = "README.md"
edition = "2021"

[dependencies]
once_cell = "1"
parking_lot = "0.12"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
static_assertions = "1"

[features]
serde = ["dep:serde"]