[package]
name = "blazemap"
version = "0.4.0"
authors = ["Andrew Sonin <sonin.cel@yandex.ru>"]
categories = ["data-structures", "concurrency"]
description = """
Implements a vector-based slab-like map with an interface similar to that of HashMap, \
and also provides tools for generating lightweight identifiers that can be type-safely used as keys for this map.
"""
keywords = ["map", "slab", "hashmap"]
license = "MIT"
documentation = "https://docs.rs/blazemap/"
homepage = "https://github.com/andrewsonin/blazemap"
repository = "https://github.com/andrewsonin/blazemap"
readme = "README.md"
edition = "2021"

[lints.rust]
rust_2018_idioms = "warn"
unreachable_pub = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
once_cell = "1"
parking_lot = "0.12"
serde = { version = "1", optional = true, features = ["derive"] }

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[dev-dependencies]
rand = "0.8"
serde_json = "1"
static_assertions = "1"

[features]
miri_action_log = []
serde = ["dep:serde"]